fix- white space on right side at <700px

--- a/css/style.css
+++ b/css/style.css
@@ -496,8 +496,9 @@ h1.sg-title {
   display: none;
 }
 
-body,
-html {
+
+
+main {
   width: 100%;
   overflow-x: hidden;
 }
